--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -23,13 +23,11 @@
 <div id="header-placeholder"></div>
 <script>
   fetch("/components/header.html")
-    .then(res => res.text())
-    .then(html => {
-      document.getElementById("header-placeholder").innerHTML = html;
-    });
+    .then(r => r.text())
+    .then(html => document.getElementById("header-placeholder").innerHTML = html);
 </script>
 
-<!-- PAGE WRAPPER -->
+<!-- MAIN -->
 <main class="page-wrapper">
 
   <!-- HERO -->
@@ -41,30 +39,38 @@
     </p>
   </section>
 
-  <!-- FORM SECTION -->
+  <!-- FORM -->
   <section class="contact-section">
     <div class="contact-container">
 
       <form
         class="contact-form"
-        action="/pages/contact/contact-success.html"
         method="POST"
-        novalidate
+        action="https://script.google.com/macros/s/AKfycbyZXDE3xUjdhFlGJFhXeASDngvgrkjDAAx_VadSqa3Rp_nH3_ndGGmnkEkFl9RwQXhr8A/exec"
       >
 
-        <!-- NAME -->
+        <!-- Honeypot (anti-spam) -->
+        <input
+          type="text"
+          name="company"
+          tabindex="-1"
+          autocomplete="off"
+          style="display:none"
+        />
+
+        <!-- Name -->
         <div class="form-group">
           <label for="name">Your Name</label>
           <input
             id="name"
             name="name"
             type="text"
-            placeholder="Jane Doe"
+            placeholder="Your full name"
             required
           />
         </div>
 
-        <!-- EMAIL -->
+        <!-- Email -->
         <div class="form-group">
           <label for="email">Email Address</label>
           <input
@@ -72,24 +78,23 @@
             name="email"
             type="email"
             placeholder="you@example.com"
-            autocomplete="email"
             required
           />
         </div>
 
-        <!-- MESSAGE -->
+        <!-- Message -->
         <div class="form-group">
-          <label for="message">Your Message</label>
+          <label for="message">Message</label>
           <textarea
             id="message"
             name="message"
             rows="6"
-            placeholder="Tell us how we can help…"
+            placeholder="Tell us how we can help you…"
             required
           ></textarea>
         </div>
 
-        <!-- ACTION -->
+        <!-- Submit -->
         <div class="form-actions">
           <button type="submit" class="btn primary">
             Send Message
@@ -107,10 +112,8 @@
 <div id="footer-placeholder"></div>
 <script>
   fetch("/components/footer.html")
-    .then(res => res.text())
-    .then(html => {
-      document.getElementById("footer-placeholder").innerHTML = html;
-    });
+    .then(r => r.text())
+    .then(html => document.getElementById("footer-placeholder").innerHTML = html);
 </script>
 
 </body>
