updated hero and menu

--- a/index.html
+++ b/index.html
@@ -33,21 +33,25 @@
       });
   </script>
 
-  <!-- =========================
-        HERO
-  ========================== -->
+   <!-- =========================
+     HERO
+    ========================== -->
   <section class="hero clean-hero">
     <div class="container hero-container">
 
       <div class="hero-card">
 
+        <span class="hero-eyebrow">
+          Built for beginners and builders who want clarity
+        </span>
+
         <h1 class="hero-title">
-          Start and Grow Your Digital Presence
+          Turn Ideas into a Working Digital Presence
         </h1>
 
         <p class="hero-sub">
-          Smart tools, quick tutorials, and practical resources
-          to help beginners build and grow online — fast.
+          Practical tools and step-by-step guidance to help you
+          launch, improve, and grow your digital presence with clarity.
         </p>
 
         <div class="hero-actions">
@@ -56,7 +60,7 @@
           </a>
 
           <a href="/pages/tools/tools.html" class="btn outline">
-            Explore Tools
+            Use Free Tools
           </a>
         </div>
 
@@ -64,6 +68,8 @@
 
     </div>
   </section>
+
+
 
   <!-- =========================
         POPULAR TOOLS
