added new tools pages to the index

--- a/index.html
+++ b/index.html
@@ -73,62 +73,114 @@
   </section>
 
   <!-- =========================
-       CLARITY TOOLS
-  ========================== -->
-  <section class="section">
-    <div class="container">
+     CLARITY TOOLS
+========================== -->
+<section class="section">
+  <div class="container">
 
-      <div class="section-head">
-        <h2 class="section-title">
-          Clarity tools you can use right now
-        </h2>
+    <div class="section-head">
+      <h2 class="section-title">
+        Clarity tools you can use right now
+      </h2>
 
-        <p class="section-subtitle">
-          Two simple tools to help people understand what you do —
-          on search and on social.
-        </p>
-      </div>
+      <p class="section-subtitle">
+        Simple tools to help people understand what you do —
+        on search and on social.
+      </p>
+    </div>
 
-      <div class="card-grid">
+    <div class="card-grid">
 
-        <!-- SEO Tool (Primary) -->
-        <a href="/pages/tools/generators/seo-meta-generator/" class="card">
-          <div class="card-icon">
-            <i data-lucide="search"></i>
-          </div>
+      <!-- SEO Tool (Primary) -->
+      <a href="/pages/tools/generators/seo-meta-generator/" class="card primary">
+        <div class="card-icon">
+          <i data-lucide="search"></i>
+        </div>
 
-          <div class="content">
-            <h3>SEO Title & Description Generator</h3>
-            <p>
-              Explain your page clearly to Google and real people.
-            </p>
-            <span class="card-link">
-              Generate SEO text →
-            </span>
-          </div>
-        </a>
+        <div class="content">
+          <h3>SEO Title & Description Generator</h3>
+          <p>
+            Explain your page clearly to Google and real people.
+          </p>
+          <span class="card-link">
+            Generate SEO text →
+          </span>
+        </div>
+      </a>
 
-        <!-- Instagram Tool (Secondary) -->
-        <a href="/pages/tools/generators/instagram-bio-generator/" class="card secondary">
-          <div class="card-icon">
-            <i data-lucide="instagram"></i>
-          </div>
+      <!-- Instagram Bio Tool (Secondary) -->
+      <a href="/pages/tools/generators/instagram-bio-generator/" class="card secondary">
+        <div class="card-icon">
+          <i data-lucide="instagram"></i>
+        </div>
 
-          <div class="content">
-            <h3>Instagram Bio & Description Generator</h3>
-            <p>
-              Write a bio that tells people what you do in seconds.
-            </p>
-            <span class="card-link">
-              Generate bio →
-            </span>
-          </div>
-        </a>
+        <div class="content">
+          <h3>Instagram Bio & Description Generator</h3>
+          <p>
+            Write a bio that tells people what you do in seconds.
+          </p>
+          <span class="card-link">
+            Generate bio →
+          </span>
+        </div>
+      </a>
 
-      </div>
+      <!-- Instagram Caption Generator -->
+      <a href="/pages/tools/instagram-caption-generator/" class="card">
+        <div class="card-icon">
+          <i data-lucide="edit-3"></i>
+        </div>
+
+        <div class="content">
+          <h3>Instagram Caption Generator</h3>
+          <p>
+            Write captions people actually read.
+          </p>
+          <span class="card-link">
+            Generate captions →
+          </span>
+        </div>
+      </a>
+
+      <!-- Hashtag Generator -->
+      <a href="/pages/tools/generators/hashtag-generator/" class="card">
+        <div class="card-icon">
+          <i data-lucide="hash"></i>
+        </div>
+
+        <div class="content">
+          <h3>Hashtag Generator</h3>
+          <p>
+            Use relevant hashtags without guessing.
+          </p>
+          <span class="card-link">
+            Generate hashtags →
+          </span>
+        </div>
+      </a>
+
+      <!-- Content Idea Generator -->
+      <a href="/pages/tools/generators/content-idea-generator/" class="card">
+        <div class="card-icon">
+          <i data-lucide="lightbulb"></i>
+        </div>
+
+        <div class="content">
+          <h3>Content Idea Generator</h3>
+          <p>
+            Know what to post before you open the app.
+          </p>
+          <span class="card-link">
+            Generate ideas →
+          </span>
+        </div>
+      </a>
 
     </div>
-  </section>
+
+  </div>
+</section>
+
 
   <!-- =========================
        VALUE / CTA
