updated index and contact

--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -12,14 +12,13 @@
 
   <!-- Styles -->
   <link rel="stylesheet" href="/css/style.css" />
-  <link rel="stylesheet" href="/css/layout.css" />
   <link rel="stylesheet" href="/css/contact.css" />
 </head>
 
 <body>
 
   <!-- =========================
-       HEADER
+       HEADER (Loaded Once)
   ========================== -->
   <div id="header-placeholder"></div>
   <script>
@@ -31,7 +30,7 @@
   </script>
 
   <!-- =========================
-       CONTACT
+       CONTACT PAGE
   ========================== -->
   <main class="contact-page">
 
@@ -108,7 +107,7 @@
   </main>
 
   <!-- =========================
-       FOOTER
+       FOOTER (Loaded Once)
   ========================== -->
   <div id="footer-placeholder"></div>
   <script>
