--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </span>
 
         <h1 class="hero-title">
-          Turn Ideas into a Working Digital Presence
+          Simple tools to get everyday digital work done
         </h1>
 
         <p class="hero-sub">
