--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         <!-- SEO Tool -->
         <a href="/pages/tools/generators/seo-meta-generator/" class="card">
-          <div class="card-icon">
+          <div class="tool-icon icon-blue">   <!--  </div><div class="card-icon">. -->
             <i data-lucide="search"></i>
           </div>
           <h3>SEO Title & Description Generator</h3>
@@ -128,7 +128,7 @@
           and small income streams.
         </p>
 
-        <a href="/pages/guides/make-money-with-tools.html" class="btn primary">
+        <a href="/pages/guides/make-money-with-tools.html" class="btn center">
           Get the guide
         </a>
 
